@@ -1,5 +1,12 @@
 2006-07-25  Murray Cumming  <murrayc@murrayc.com>
 
+	* examples/book/printing/advanced/printformoperation.cc:
+	* examples/book/printing/advanced/printformoperation.h: Uncomment out 
+	the on_preview() override again, and add an if that shows that m_refLayout is 
+	null, because on on_begin_print() has never been called.
+
+2006-07-25  Murray Cumming  <murrayc@murrayc.com>
+
 	* examples/book/printing/advanced/examplewindow.cc:
 	* examples/book/printing/advanced/printformoperation.cc:
 	* examples/book/printing/advanced/printformoperation.h:
